@@ -4,6 +4,12 @@ drumkv1 - an old-school drum-kit sampler
 ChangeLog
 
 
+SVN TRUNK
+
+- An anti-denormal regression applied to the Phaser fx stage
+  (affecting early proto-beta >= 0.4.0).
+
+
 0.4.1  2014-04-07  A proto-beta bis.
 
 - Once so called 'Noise' wave-shapes are now being made a lot
